--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+1.2.0.1 - April 28 2009
+-Added logic to respect Cache-Control=no-cache on the response 
+
 1.2.0.0 - September 6 2009
 -Renamed packages to ca.digitalcave
 
